k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: eticketbe
          image: shashidas/eticket:backend-v2.0
          ports:
            - containerPort: 7001
---

---
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
  ports:
    - port: 7001
      targetPort: 7001
