k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: eticketfe
          image: shashidas/eticket:frontend-v2.0
          ports:
            - containerPort: 3000
---

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - port: 3000
      targetPort: 3000
